
=encoding utf8

=head1 NAME

REVISION HISTORY - Set::Object

=head1 1.35, 2015-06-10

=over

=item *

Change to Artistic License 2.0

=item *

Add more misc tests. Add use strict to Set::Object::Weak

=back

=head1 1.34, 2013-12-25

=over

=item *

Make synopsis examples work (tadzik)

=back

=head1 1.33, 2013-12-13

=over

=item *

Fix RT #90070: Improve pod for sorted @$set in list context vs 
unsorted ->elements (ftobin)

=item *

Fix RT #87658: Typo in pod (dsteinbrunner)

=back

=head1 1.32, 2013-05-15 rurban (released 2013-12-13)

=over

=item *

Reverts Changes.pod patch RT#85244 as it conflicts with the Set::Object pod on metacpan.
Also RT #85246

=back

=head1 1.31, 2013-05-13 rurban

=over

=item *

Changes.pod patch by Gregor Hermann, debian perl group - RT#85244

=back

=head1 1.30, 2013-04-04 rurban (new maintainer)

=over

=item *

Fixes for 5.16 and newer - RT#83426
Sort by member names, not the refs.
Fix wrong weak test with globals. Changed to lexicals and use strict/warnings.

=item *

Fix F<t/misc/segfault.t>, check SvMAGICAL before doing C<mg_find>

=item *

Fixed wrong C format types in warnings and C<SET_OBJECT_MAGIC_backref>.
Added PREREQ_PMs, make L<Test::LeakTrace> and L<Moose> an optional dependency
for F<t/misc/more_leaks.t>

=item *

Improve thread-safety (forbid concurrent writes), but still dealing with 
Attempt to free non-existent shared string and 
Unbalanced string table refcount: (1) for "8" during global destruction.
- RT #22760

=item *

Add missing typemap entry const char * for 5.6

=back

=head1 1.29, 13 Feb 2013

=over

=item *

Fixed a typo in a function which really shouldn't exist - RT#79653

=item *

Marked a couple of functions as deprecated for removal (including the
above function).

=item *

Fixed the magic cleanup code to use the appropriate macro/function to
clean up the magic list instead of trying to do it itself.
Unsurprisingly, fixes a memory leak.  (RT#69967, also RT#67289)

=back

=head1 1.28, 22 Jul 2010
