@@ -5,6 +5,17 @@
 
 REVISION HISTORY - Set::Object
 
+=head1 1.36, 2015-06-10
+
+=over
+
+=item *
+
+Make set(set()) work. Seperate between method calls and empty sets as 1st arg.
+Fixes RT #93516 by C<smls75@gmail.com>
+
+=back
+
 =head1 1.35, 2015-06-10
 
 =over
